--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,3 +1,51 @@
 .Weather {
   border: 1px solid #faca66;
+  padding: 16px;
+  font-family: "Montserrat", sans-serif;
+
+  border-radius: 10px;
+}
+
+.Weather h1 {
+  color: #f5948d;
+  font-size: 32px;
+  font-weight: bold;
+  line-height: 28px;
+  margin: 20px 0 0 0;
+}
+ul {
+  margin: 0;
+  padding: 0;
+}
+.Weather li {
+  list-style: none;
+
+  color: #f5948d;
+  font-size: 16px;
+  font-weight: 300;
+  text-transform: capitalize;
+}
+.Weather form {
+  margin-top: 20px;
+}
+.Weather img {
+  position: relative;
+  top: -18px;
+  width: 64px;
+  height: 64px;
+}
+.Weather .temperature {
+  font-weight: 400;
+  color: #f5948d;
+  font-size: 62px;
+  line-height: 64px;
+  margin-left: 5px;
+}
+.Weather .unit {
+  color: #f5948d;
+  font-size: 16px;
+  font-weight: 400;
+  position: relative;
+  line-height: 1;
+  top: -34px;
 }
